@@ -1,5 +1,6 @@
 11/11/2009
 - fixed {foreachelse}, {forelse}, {sectionelse} compiled code at nocache variables
+- removed checking for reserved variables
 
 11/10/2009
 - fixed preg_qoute on delimiters
